--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Htmlparser</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
